# my-claude-code

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: MiniCode-python-rewrite-plan.md
docs/engineering/: code-standards.md
docs/plan/: P0-project-skeleton.md
docs/superpowers/plans/: 2026-06-09-P0-P1-skeleton-and-types.md  2026-06-09-config-refactor.md
src/my_claude_code/: __init__.py  cli.py
src/my_claude_code/commands/: __init__.py
src/my_claude_code/config/: __init__.py  paths.py  settings.py
src/my_claude_code/core/: __init__.py  types.py
src/my_claude_code/permissions/: __init__.py
src/my_claude_code/prompts/: __init__.py
src/my_claude_code/providers/: __init__.py  adapter.py  anthropic.py  mock.py  openai_compatible.py
src/my_claude_code/runtime/: __init__.py  app.py
src/my_claude_code/tools/: __init__.py
tests/: test_anthropic_adapter.py  test_cli.py  test_config_paths.py  test_mock_model.py  test_openai_compatible.py  test_runtime_app.py  test_settings.py  test_types.py
